--- a/ludo_game.css
+++ b/ludo_game.css
@@ -270,8 +270,47 @@ p
 	{
 		position:absolute;
 		left:42vw;
-		bottom:73vw;
+		bottom:60vw;
 		width:35%;
+	}
+	p
+	{
+		position:absolute;
+		bottom:18vw;
+	}
+}
+@media only screen and (max-width:500px)
+{
+	.lockerA,.lockerB
+	{
+		width:35%;
+		height:11%;
+	}
+	.dice
+	{
+		position:absolute;
+		left:42vw;
+		bottom:40vw;
+		width:45%;
+	}
+	p
+	{
+		position:absolute;
+		bottom:18vw;
+	}
+}
+@media only screen and (max-width:330px)
+{
+	.lockerA,.lockerB
+	{
+		width:40%;
+	}
+	.dice
+	{
+		position:absolute;
+		left:42vw;
+		bottom:40vw;
+		width:50%;
 	}
 	p
 	{
